--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -88,15 +88,14 @@ jobs:
       GOPATH: ${{ github.workspace }}
     defaults:
       run:
-        working-directory: src/github.com/newrelic/newrelic-prometheus-exporters-packages
-    strategy:
+        working-directory: src/repo
       matrix:
         goarch: [amd64]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: src/github.com/newrelic/newrelic-prometheus-exporters-packages
+          path: src/repo
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.13.1'
