--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -89,8 +89,6 @@ jobs:
     defaults:
       run:
         working-directory: src/repo
-      matrix:
-        goarch: [amd64]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -114,4 +112,4 @@ jobs:
       - name : Create MSI installer
         shell: pwsh
         run: |
-          .\exporters\${{ steps.load_variables.outputs.NAME }}\win_build.ps1 -arch ${{ matrix.goarch }} -exporterHead ${{ steps.load_variables.outputs.EXPORTER_HEAD }} -exporterName ${{ steps.load_variables.outputs.NAME }} -exporterURL ${{ steps.load_variables.outputs.EXPORTER_REPO_URL }} -version ${{ steps.load_variables.outputs.VERSION }} -exporterGUID ${{ steps.load_variables.outputs.EXPORTER_GUID }} -licenseGUID ${{ steps.load_variables.outputs.LICENSE_GUID }}  -pfx_passphrase "$env:PFX_PASSPHRASE" 
+          .\exporters\${{ steps.load_variables.outputs.NAME }}\win_build.ps1 -arch amd64 -exporterHead ${{ steps.load_variables.outputs.EXPORTER_HEAD }} -exporterName ${{ steps.load_variables.outputs.NAME }} -exporterURL ${{ steps.load_variables.outputs.EXPORTER_REPO_URL }} -version ${{ steps.load_variables.outputs.VERSION }} -exporterGUID ${{ steps.load_variables.outputs.EXPORTER_GUID }} -licenseGUID ${{ steps.load_variables.outputs.LICENSE_GUID }}  -pfx_passphrase "$env:PFX_PASSPHRASE" 
