feat: prerelease workflow is launched when pushed changes into feature/publish-pipeline branch

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,7 +24,7 @@
 on: 
   push:
     branches:
-      - feature/ci
+      - feature/publish-pipeline
 
 env:
   PFX_CERTIFICATE_BASE64: ${{ secrets.PFX_CERTIFICATE_BASE64 }} # base64 encoded
